Changing the about page overflow issue

--- a/css/general/about.css
+++ b/css/general/about.css
@@ -114,14 +114,14 @@
     }
 
     .sidebar {
-        width: 80%;
+        width: 100%;
         position: relative;
         top: 10px;
         z-index: -1;
     }
 
     .content {
-        width: 85%;
+        width: 100%;
         padding: 0;
     }
 }
